--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -158,7 +158,7 @@ jobs:
           FunctionName: spinnaker-pipelines-dev-deployer
           Payload: '{"application": "${{ steps.read_project_name.outputs.rootProject-name }}", "template": "backebd-spring", "account": "DAIS"}'
       - name: Store tail logs to file
-        run: echo "${{ fromJSON(create-app-and-pipelines-dais.foobar.outputs.response).LogResult }}" > invocation-logs.json
+        run: echo "${{ fromJSON(steps.create-app-and-pipelines-dais.outputs.response).LogResult }}" > invocation-logs.json
       - name: Create Application and Pipelines - JM
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         id: create-app-and-pipelines-jm
