--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -159,6 +159,9 @@ jobs:
           Payload: '{"application": "${{ steps.read_project_name.outputs.rootProject-name }}", "template": "backebd-spring", "account": "DAIS"}'
       - name: Store tail logs to file
         if: always()      
+        run: echo "${{ fromJSON(steps.create-app-and-pipelines-dais.outputs.response).LogResult }}" > invocation-logs.json           
+      - name: Store tail logs to file
+        if: always()      
         run: echo "${{ fromJSON(steps.create-app-and-pipelines-dais.outputs.response).LogResult }}" > invocation-logs.json
       - name: Create Application and Pipelines - JM
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
