--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -128,28 +128,28 @@ jobs:
             echo "::set-output name=projectName::$repositoryName"
             echo "::set-output name=gitLog::$gitLog"
           fi
-      # - name: Create Application and Pipelines - JM
-      #   if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
-      #   id: create-app-and-pipelines-jm
-      #   uses: gagoar/invoke-aws-lambda@master
-      #   with:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
-      #     REGION: ${{ secrets.ACTIONS_AWS_REGION }}
-      #     InvocationType: Event
-      #     FunctionName: spinnaker-pipelines-dev-deployer
-      #     Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "JM"}'
-      # - name: Create Application and Pipelines - DAIS
-      #   if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
-      #   id: create-app-and-pipelines-dais
-      #   uses: gagoar/invoke-aws-lambda@master
-      #   with:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
-      #     REGION: ${{ secrets.ACTIONS_AWS_REGION }}
-      #     InvocationType: Event
-      #     FunctionName: spinnaker-pipelines-dev-deployer
-      #     Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}'
+      - name: Create Application and Pipelines - JM
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+        id: create-app-and-pipelines-jm
+        uses: gagoar/invoke-aws-lambda@master
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+          InvocationType: Event
+          FunctionName: spinnaker-pipelines-dev-deployer
+          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "JM"}'
+      - name: Create Application and Pipelines - DAIS
+        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
+        id: create-app-and-pipelines-dais
+        uses: gagoar/invoke-aws-lambda@master
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
+          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
+          InvocationType: Event
+          FunctionName: spinnaker-pipelines-dev-deployer
+          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}'
       - name: Build, tag, and push docker image to Amazon ECR
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         env:
