--- a/.github/workflows/java-library.yml
+++ b/.github/workflows/java-library.yml
@@ -56,7 +56,7 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
-          ./gradlew test
+          #./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
            echo "::set-output name=gitLog::$gitLog"
