--- a/.github/workflows/java-library.yml
+++ b/.github/workflows/java-library.yml
@@ -57,8 +57,10 @@ jobs:
           git fetch --tags
           git status --porcelain
           #./gradlew test
-          ./gradlew --refresh-dependencies version
-          ./gradlew release -x test
+          ./gradlew --refresh-dependencies version          
+          if [[ "${{ inputs.hotfix }}" ==  "false" ]]; then
+            ./gradlew release -x test
+          fi
            echo "::set-output name=gitLog::$gitLog"
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
