--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -96,8 +96,8 @@ jobs:
           repositoryName=$(node -pe "require('./package.json').name.replace('@dais/', '')")          
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           if [[ "$repositoryName" == "pl-claims-hub" ]]; then
-            npm install -g vsts-npm-auth
-            vsts-npm-auth -config .npmrc
+            npm install -g better-vsts-npm-auth
+            better-vsts-npm-auth -config .npmrc
             #npm i ./angular-elements/diamond-search-1.0.2.tgz
           fi
           npm ci
