--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -140,6 +140,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
           AZURE_TOKEN: ${{ secrets.AZURE_TOKEN }}
+          AZURE_AUTH_TOKEN: ${{ secrets.AZURE_AUTH_TOKEN }}
       - name: Create Application and Pipelines - JM
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         id: create-app-and-pipelines-jm
