--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -101,7 +101,7 @@ jobs:
             cat /home/runner/work/_temp/.npmrc
             echo "=================================== home npm"
             echo "=================================== project npm"
-            cat ./.npmrc
+            cat ./.npmrc >> /home/runner/work/_temp/.npmrc
             echo "=================================== project npm"
             npm ci
             git commit -am"Packages updated"
