--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -104,7 +104,7 @@ jobs:
             cat ./.npmrc >> /home/runner/work/_temp/.npmrc
             echo "=================================== project npm"
             npm install -g better-vsts-npm-auth
-            better-vsts-npm-auth -config .npmrc -T -f $HOME/.npmrc
+            better-vsts-npm-auth
 
             npm cache clean --force
             npm i
