--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -91,6 +91,10 @@ jobs:
             better-vsts-npm-auth config set refresh_token ${{ secrets. AZURE_REFRESH_TOKEN }}
             better-vsts-npm-auth -config .npmrc
           fi
+          if [[ "$repositoryName" == "internet-of-insurance" ]]; then
+            npm install 
+          fi
+          
           npm ci
           git commit -am"Build modified files" || echo 'No files changed'
           if [[ "${{ inputs.run_tests }}" ==  "true" ]]; then
