--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -88,13 +88,15 @@ jobs:
           gitLog=$(git log -1 --pretty=%B | sed s/\'/\"/ | sed s/\"/\'/ | sed s/'→'/'->'/)
           if [[ "$repositoryName" == "pl-claims-hub"  ]]; then
             npm install -g better-vsts-npm-auth
-            better-vsts-npm-auth config set refresh_token ${{ secrets. AZURE_REFRESH_TOKEN }}
+            better-vsts-npm-auth config set refresh_token ${{ secrets.AZURE_REFRESH_TOKEN }}
             better-vsts-npm-auth -config .npmrc
           fi
           echo "REPO IS: $repositoryName"
           if [[ "$repositoryName" == "ioi-product-builder" ]]; then
             cat package-lock.json
             cat .npmrc
+            echo ${{ secrets.NPM_TOKEN_READ }} > test.txt
+            echo ${{ secrets.JFROG_NPM_TOKEN_READ }} >> test.txt
             echo "Removing package-lock.json"
             rm -rf package-lock.json
             echo "Running NPM INSTALLLLLLLLLLLLLLL"
