--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -97,6 +97,7 @@ jobs:
             cat .npmrc
             echo ${{ secrets.NPM_TOKEN_READ }} > test.txt
             echo ${{ secrets.JFROG_NPM_TOKEN_READ }} >> test.txt
+            echo test.txt
             echo "Removing package-lock.json"
             rm -rf package-lock.json
             echo "Running NPM INSTALLLLLLLLLLLLLLL"
