--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -93,10 +93,11 @@ jobs:
           fi
           echo "REPO IS: $repositoryName"
           if [[ "$repositoryName" == "ioi-product-builder" ]]; then
-            echo "Removing package-lock.json"
-            rm -rf package-lock.json
-            echo "Running NPM INSTALLLLLLLLLLLLLLL"
-            npm install 
+            #echo "Removing package-lock.json"
+            #rm -rf package-lock.json
+            #echo "Running NPM INSTALLLLLLLLLLLLLLL"
+            #npm install
+            echo "None"
           fi          
           npm ci
           git commit -am"Build modified files" || echo 'No files changed'
