--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -97,6 +97,7 @@ jobs:
             #rm -rf package-lock.json
             #echo "Running NPM INSTALLLLLLLLLLLLLLL"
             #npm install
+            npm cache clean --force
             echo "None"
           fi          
           npm ci
