--- a/.github/workflows/node-jason.yml
+++ b/.github/workflows/node-jason.yml
@@ -127,17 +127,6 @@ jobs:
             echo "::set-output name=projectName::$repositoryName"
             echo "::set-output name=gitLog::$gitLog"
           fi
-      - name: Create Application and Pipelines - JM
-        if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') || inputs.hotfix
-        id: create-app-and-pipelines-jm
-        uses: gagoar/invoke-aws-lambda@master
-        with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_AWS_SECRET_ACCESS_KEY }}
-          REGION: ${{ secrets.ACTIONS_AWS_REGION }}
-          InvocationType: Event
-          FunctionName: spinnaker-pipelines-dev-deployer
-          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "JM"}'
       - name: Create Application and Pipelines - DAIS
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') || inputs.hotfix
         id: create-app-and-pipelines-dais
@@ -148,7 +137,7 @@ jobs:
           REGION: ${{ secrets.ACTIONS_AWS_REGION }}
           InvocationType: Event
           FunctionName: spinnaker-pipelines-dev-deployer
-          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS"}'
+          Payload: '{"application": "${{ steps.npm-build.outputs.projectName }}", "template": "web-application", "account": "DAIS", "tag": "${{ steps.npm-build.outputs.imageVersion }}"}'
       - name: Build, tag, and push docker image to Amazon ECR
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') || inputs.hotfix
         env:
