--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -95,10 +95,12 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
+          CURRENT_VERSION=$(git describe --tags --abbrev=0)          
           ./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
-           echo "::set-output name=gitLog::$gitLog"
+          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')          
+          echo "::set-output name=gitLog::$gitLog"
       - name: Retry Build with Gradle
         id: retry-build
         if: steps.build.outcome == 'failure'
@@ -114,12 +116,16 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
-          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{$NF+=1; OFS="."; print $0}')
+          CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          git tag $NEW_VERSION
           git push --tags
           ./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
-           echo "::set-output name=gitLog::$gitLog"
+          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')
+          echo "::set-output name=gitLog::$gitLog"
+          echo "::set-output name=currentVersion::$CURRENT_VERSION"
+          echo "::set-output name=newVersion::$NEW_VERSION"
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always()
@@ -137,9 +143,11 @@ jobs:
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         id: publish
         run: |
-          echo ${{ steps.read_version.outputs.build-version }}
-          echo ${{ steps.read_project_name.outputs.rootProject-name }}
-          ./gradlew -x test artifactoryPublish pushDocker
+          [[ $steps.build.outputs.currentVersion != steps.build.outputs.newVersion ]]; then
+            ./gradlew -x test artifactoryPublish pushDocker
+          else
+            echo "Nothing to do"
+          fi
       - name: Read Version
         id: read_version
         uses: christian-draeger/read-properties@1.1.0
