--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -143,6 +143,8 @@ jobs:
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop') || inputs.hotfix
         id: publish
         run: |
+          echo "Current version: ${{steps.build.outputs.currentVersion}}"
+          echo "New version: ${{steps.build.outputs.newVersion}}"
           if [[ ${{steps.build.outputs.currentVersion}} != ${{steps.build.outputs.newVersion}} ]]; then
             ./gradlew -x test artifactoryPublish pushDocker
           else
