--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -99,7 +99,7 @@ jobs:
           ./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
-          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')          
+          NEW_VERSION=$(git describe --tags --abbrev=0)          
           echo "::set-output name=gitLog::$gitLog"
           echo "::set-output name=currentVersion::$CURRENT_VERSION"
           echo "::set-output name=newVersion::$NEW_VERSION"          
@@ -119,12 +119,13 @@ jobs:
           git fetch --tags
           git status --porcelain
           CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')
           git tag $NEW_VERSION
           git push --tags
           ./gradlew test
           ./gradlew --refresh-dependencies version
           ./gradlew release -x test
-          NEW_VERSION=$(git describe --tags --abbrev=0 | awk -F. '{OFS="."; $NF+=1; print $0}')
+          NEW_VERSION=$(git describe --tags --abbrev=0)
           echo "::set-output name=gitLog::$gitLog"
           echo "::set-output name=currentVersion::$CURRENT_VERSION"
           echo "::set-output name=newVersion::$NEW_VERSION"
