--- a/.github/workflows/java-library.yml
+++ b/.github/workflows/java-library.yml
@@ -56,6 +56,7 @@ jobs:
           echo "${GRADLE_PROPERTIES}" > ~/.gradle/gradle.properties
           git fetch --tags
           git status --porcelain
+          CURRENT_VERSION=$(git describe --tags --abbrev=0)             
           #./gradlew test
           ./gradlew --refresh-dependencies version          
           if [[ "${{ inputs.hotfix }}" ==  "true" ]]; then
@@ -63,7 +64,10 @@ jobs:
           else
             ./gradlew release -x test
           fi
+          NEW_VERSION=$(git describe --tags --abbrev=0)          
           echo "::set-output name=gitLog::$gitLog"
+          echo "::set-output name=currentVersion::$CURRENT_VERSION"
+          echo "::set-output name=newVersion::$NEW_VERSION"             
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always()
@@ -81,9 +85,13 @@ jobs:
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop')      
         id: publish
         run: |
-          echo ${{ steps.read_version.outputs.build-version }}
-          echo ${{ steps.read_project_name.outputs.rootProject-name }}
-          ./gradlew -x test artifactoryPublish
+          echo "Current version: ${{steps.build.outputs.currentVersion}}"
+          echo "New version: ${{steps.build.outputs.newVersion}}"
+          if [[ ${{steps.build.outputs.currentVersion}} != ${{steps.build.outputs.newVersion}} ]]; then
+            ./gradlew -x test artifactoryPublish pushDocker
+          else
+            echo "Nothing to do"
+          fi          
       - name: Read Version
         id: read_version
         uses: christian-draeger/read-properties@1.1.0
