--- a/.github/workflows/java-gradle.yml
+++ b/.github/workflows/java-gradle.yml
@@ -56,6 +56,8 @@ permissions:
   id-token: write
   contents: read
   checks: write
+concurrency:
+  group: ${{ github.action_repository}}-${{ github.head_ref || github.ref_name }}
 jobs:
   build:
     if: github.actor != 'dais-machine'
